# euclidean-rhythm

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: architecture.md  charter.md  logo-prompt.md
examples/: basic_usage.py
src/euclidean_rhythm/: __init__.py  analysis.py  cli.py  generation.py  metrics.py  operations.py
tests/: test_analysis.py  test_cli.py  test_generation.py  test_metrics.py  test_operations.py
