[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "euclidean-rhythm"
version = "0.3.0"
description = "Euclidean rhythms (Bjorklund) with Toussaint evenness, Keith syncopation, and Pressing rhythmic oddity, in pure Python."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Amaar Chughtai" }]
keywords = [
  "euclidean-rhythm",
  "rhythm",
  "music",
  "bjorklund",
  "toussaint",
  "generative-music",
  "music-theory",
  "python",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11", "hypothesis>=6"]

[project.scripts]
euclidean-rhythm = "euclidean_rhythm.cli:main"

[project.urls]
Homepage = "https://github.com/amaar-mc/euclidean-rhythm"
Repository = "https://github.com/amaar-mc/euclidean-rhythm"
Issues = "https://github.com/amaar-mc/euclidean-rhythm/issues"
Changelog = "https://github.com/amaar-mc/euclidean-rhythm/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/euclidean_rhythm"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
files = ["src"]
